@@ -1,12 +1,12 @@
-db_fget gforge/shared/cvs_host seen || true
+db_fget gforge/shared/scm_host seen || true
 if [ "$RET" = "false" ] ; then
     db_get gforge/shared/domain_name
-    db_set gforge/shared/cvs_host cvs.$RET
+    db_set gforge/shared/scm_host scm.$RET
 fi
 
-db_input medium gforge/shared/cvs_host || true
+db_input medium gforge/shared/scm_host || true
 
 db_go || true
 
-vars="cvs_host"
+vars="scm_host"
 update_mainconffile $vars
